--- a/mywatchlist/templates/mywatchlist.html
+++ b/mywatchlist/templates/mywatchlist.html
@@ -20,7 +20,7 @@
     </tr>
     {% for movie in watch_list %}
         <tr>
-            <th>{{movie.watch}}</th>
+            <th>{{movie.watched}}</th>
             <th>{{movie.title}}</th>
             <th>{{movie.rating}}</th>
             <th>{{movie.release_date}}</th>
