--- a/mywatchlist/templates/mywatchlist.html
+++ b/mywatchlist/templates/mywatchlist.html
@@ -12,11 +12,11 @@
 
   <table>
     <tr>
-      <th>Watch</th>
+      <th>Watched</th>
       <th>Title</th>
       <th>Rating</th>
       <th>Release Date</th>
-      <th>Reviw</th>
+      <th>Review</th>
     </tr>
     {% for movie in watch_list %}
         <tr>
