--- a/todolist/templates/login.html
+++ b/todolist/templates/login.html
@@ -5,41 +5,48 @@
 {% endblock meta %}
 
 {% block content %}
+  <div class="row">
+    <div class="col-4 offset-4">
+      <div class="card border-dark shadow-lg mb-3">
+        <div class="card-body">
+          <div class="text-center mt-4 pb-2">
+            <h3 class="clearfix fw-bold text-danger"><i class="fas fa-sign-in fa-fw"></i> Login</h3>
+            <small class="mx-4">Silakan masukkan username dan password kamu</small>
+            <hr>
+          </div>
+          
+          {% if messages %}
+            <div class="alert alert-danger" role="alert">
+              <ul class="list-unstyled py-0 my-0">
+                {% for message in messages %}
+                  <li class="list-unstyled-item">{{ message }}</li>
+                {% endfor %}
+              </ul>
+            </div>
+          {% endif %}
 
-<div class = "login">
-
-    <h1>Login</h1>
-
-    <form method="POST" action="">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>Username: </td>
-                <td><input type="text" name="username" placeholder="Username" class="form-control"></td>
-            </tr>
-                    
-            <tr>
-                <td>Password: </td>
-                <td><input type="password" name="password" placeholder="Password" class="form-control"></td>
-            </tr>
-
-            <tr>
-                <td></td>
-                <td><input class="btn login_btn" type="submit" value="Login"></td>
-            </tr>
-        </table>
-    </form>
-
-    {% if messages %}
-        <ul>
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}     
-        
-    Belum mempunyai akun? <a href="{% url 'todolist:register' %}">Buat Akun</a>
-
-</div>
-
+          <form method="POST" action="">
+            {% csrf_token %}
+            <div class="mb-3 mt-3">
+              <label class="form-label">Username</label>
+              <input type="text" name="username" class="form-control" required>
+            </div>
+            <div class="mb-3 mt-3">
+              <label class="form-label">Password</label>
+              <input type="password" name="password" class="form-control" required>
+            </div>
+            <div class="mb-3 mt-4">
+              <div class="d-grid gap-2">
+                <input class="login_btn btn btn-danger" type="submit" value="Login">
+              </div>
+            </div>
+          </form>
+          <center class="mt-4">
+            <hr>
+            Belum mempunyai akun? <a href="{% url 'todolist:register' %}">Buat Akun</a>
+          </center>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
