--- a/todolist/templates/create_task.html
+++ b/todolist/templates/create_task.html
@@ -1,17 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="header">
-    <h3>Task Form</h3>
+
+<div class="header text-center">
+    <h3 class="fs-4 fw-bold">Task Form</h3>
 </div>
+<br>
+
+<div class="d-flex justify-content-center">
     <form method="POST" action="" id="newForm">
         {% csrf_token %}
-        <table>
-            {{form.as_table}}
+        {% for input in form %}
+        
+            <p class="text-center">{{input.label}}</p>
+            <p>{{input}}</p>
+        
+        {% endfor %}
+        
+        <!-- <table>
+            {{form.as_div}}
             <tr>  
                 <td></td>
-                <td><input type="submit" value="Create Task"/></td>
             </tr>
-        </table>
+        </table> -->
+        
+    <div class="header text-center">
+        <input class="btn btn-outline-danger my-4" type="submit" value="Create Task"/>
+    </div>
     </form>
+    
+</div>
+
 {% endblock content %}
