--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -5,30 +5,43 @@
 {% endblock meta %}
 
 {% block content %}  
+  <div class="row">
+    <div class="col-4 offset-4">
+      <div class="card border-dark shadow-lg mb-3">
+        <div class="card-body">
+          <div class="text-center mt-4 pb-2">
+            <h3 class="clearfix fw-bold text-danger"><i class="fas fa-user-plus fa-fw"></i> Registrasi Akun</h3>
+            <small class="mx-4">Silakan lengkapi form di bawah untuk mendaftar</small>
+            <hr>
+          </div>
+          
+          {% if messages %}
+            <div class="alert alert-danger" role="alert">
+              <ul class="list-unstyled py-0 my-0">
+                {% for message in messages %}
+                  <li class="list-unstyled-item">{{ message }}</li>
+                {% endfor %}
+              </ul>
+            </div>
+          {% endif %}
 
-<div class = "login">
-    
-    <h1>Formulir Registrasi</h1>  
-
-        <form method="POST" >  
-            {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
-            </table>  
-        </form>
-
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
-    {% endif %}
-
-</div>  
-
+          <form method="POST" action="">
+            {% csrf_token %}
+            <table class="small">
+              {{ form.as_table }}
+            </table>
+            <div class="mb-3 mt-4">
+              <div class="d-grid gap-2">
+                <input class="login_btn btn btn-danger" type="submit" value="Daftar">
+              </div>
+            </div>
+          </form>
+          <center class="mt-4">
+            <hr>
+            Sudah punya akun? <a href="{% url 'todolist:login' %}">Login</a>
+          </center>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
