--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -28,12 +28,16 @@
     function showTask(data) {
         for (i = 0; i < data.length; i++){
                 $(".card-collection").append(
-                `<div class="card border border-danger mx-3 my-4 zoom" style="max-width: 18rem;">
+                `<div id="${data[i].pk}" class="card border border-danger mx-3 my-4 zoom" style="max-width: 18rem;">
                     <div class="card-header">Created Date: ${data[i].fields.date}</div>
                     <div class="card-body">
                         <h5 class="card-title">${data[i].fields.title}</h5>
                         <p class="card-text">${data[i].fields.description}</p>
                     </div>
+                    <div class="d-flex flex-wrap justify-content-center">
+                        <a onclick="delete_todolist(${data[i].pk})" id="delete-icon"><i class="fa fa-trash"></i></a>
+                    </div>
+                    <br>
                 </div>`
                 )
             }
@@ -43,13 +47,17 @@
     function showLastTask(data) {
 
         $(".card-collection").append(
-                `<div class="card border border-danger mx-3 my-4 zoom" style="max-width: 18rem;">
+                `<div id="${data[i].pk}" class="card border border-danger mx-3 my-4 zoom" style="max-width: 18rem;">
                     <div class="card-header">Created Date: ${data[data.length-1].fields.date}</div>
                     <div class="card-body">
                         <h5 class="card-title">${data[data.length-1].fields.title}</h5>
                         <p class="card-text">${data[data.length-1].fields.description}</p>
                     </div>
-                </div>`
+                    <div class="d-flex flex-wrap justify-content-center">
+                        <a onclick="delete_todolist(${data[data.length-1].pk})" id="delete-icon"><i class="fa fa-trash"></i></a>
+                    </div>
+                </div>
+`
         )
     }
 
@@ -72,9 +80,20 @@
                     alert("Error happened")
                 }
             })
-            return false;
-        
+            return false;   
     }
+
+    function delete_todolist(id){
+    $.ajax({
+      type :"DELETE",
+      csrfmiddlewaretoken: "{{ csrf_token }}",
+      url :`/todolist/delete-ajax/${id}`,
+      success: function () {
+        $(`#${id}`).remove()
+      },
+    })
+
+}
 
     // Show task
     $(document).ready(function() {
